--- a/node/event-bus/Dockerfile
+++ b/node/event-bus/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:12
+FROM node:alpine
 
 WORKDIR /app
 
@@ -8,6 +8,4 @@ RUN npm install
 
 COPY . .
 
-EXPOSE 3000
-
-CMD [ "node","index.js" ]
+CMD [ "npm","start" ]
